fix button mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1176,8 +1176,8 @@ section.projects {
                         border-radius: 25px;
 
                         &:hover {
-                           border: 1px solid var(--color-yellow);
-                           background-color: #ffffff;
+                            border: 1px solid var(--color-yellow);
+                            background-color: #ffffff;
                             color: #000000;
                             box-shadow: 0px 4px 20px var(--color-yellow);
                         }
@@ -1222,21 +1222,24 @@ section.projects {
 
                         a {
                             background-color: var(--color-yellow);
+                            border: 1px solid var(--color-yellow);
                             color: #000000;
                             padding: 10px 25px;
                             text-decoration: none;
-                            margin-top: 0;
+                            margin-top: 30px;
                             transition: .2s linear;
                             font-weight: 600;
                             width: 100%;
-                            max-width: 280px;
                             text-align: center;
                             text-transform: uppercase;
+                            border-radius: 25px;
+                            max-width: 230px;
 
                             &:hover {
-                                background-color: var(--color-grey);
+                                border: 1px solid var(--color-yellow);
+                                background-color: #ffffff;
                                 color: #000000;
-                                box-shadow: 0px 4px 20px var(--color-grey);
+                                box-shadow: 0px 4px 20px var(--color-yellow);
                             }
                         }
                     }
